remove grahical abstract

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 % Modified for use with JCC - Madhusudan Singh Copyright (C) (2012). All rights reserved.
-%\documentclass[aip,reprint]{revtex4-1}
-\documentclass[aip]{revtex4-1}
+\documentclass[aip,reprint]{revtex4-1}
+%\documentclass[aip]{revtex4-1}
 
 \setlength{\oddsidemargin}{0in}  %left margin position, reference is one inch
 \setlength{\textwidth}{6.5in}    %width of text=8.5-1in-1in for margin
@@ -46,38 +46,38 @@ energy.
 %*****************Graphical Table of Contents******************** THIS IS MANDATORY *******************
 
 
-\begin{figure}[h]
-\centering
-\colorbox{background-color}{
-\fbox{
-\begin{minipage}{1.0\textwidth}
-%\includegraphics[width=50mm,height=50mm]{cc.eps} % Pick only one of the two styles by uncommenting the corresponding \includegraphics
-\includegraphics[width=50mm]{ring_pbe0_tddft}
-%\includegraphics[width=110mm,height=20mm]{ring_pbe0_tddft}
-\\
-A pseudo-potential system for recreating an sp\(^{2}\) carbon atom is built 
-and tested as a building block for various pseudo-hydrocarbon chain and ring systems.  
-This pseudo-system has a central charge of 1, thus it contains only one
-electron. It is employed in various calculations on a range of hydrocarbons, from small chains to polycyclic aromatics.
-The relative errors obtained with the PBE0 functional range from
-1.0\% on TD-DFT first excitation energy to 10\% on ionisation
-energy.
-\end{minipage}
-}}
-\end{figure}
+%\begin{figure}[h]
+%\centering
+%\colorbox{background-color}{
+%\fbox{
+%\begin{minipage}{1.0\textwidth}
+%%\includegraphics[width=50mm,height=50mm]{cc.eps} % Pick only one of the two styles by uncommenting the corresponding \includegraphics
+%\includegraphics[width=50mm]{ring_pbe0_tddft}
+%%\includegraphics[width=110mm,height=20mm]{ring_pbe0_tddft}
+%\\
+%A pseudo-potential system for recreating an sp\(^{2}\) carbon atom is built 
+%and tested as a building block for various pseudo-hydrocarbon chain and ring systems.  
+%This pseudo-system has a central charge of 1, thus it contains only one
+%electron. It is employed in various calculations on a range of hydrocarbons, from small chains to polycyclic aromatics.
+%The relative errors obtained with the PBE0 functional range from
+%1.0\% on TD-DFT first excitation energy to 10\% on ionisation
+%energy.
+%\end{minipage}
+%}}
+%\end{figure}
 
 % makes references listed with 1., 2., etc.  
-  \makeatletter
-  \renewcommand\@biblabel[1]{#1.}
-  \makeatother
+%  \makeatletter
+%  \renewcommand\@biblabel[1]{#1.}
+%  \makeatother
 
 \bibliographystyle{apsrev}
 
-\renewcommand{\baselinestretch}{1.5}
-\normalsize
+%\renewcommand{\baselinestretch}{1.5}
+%\normalsize
 
 
-\clearpage
+%\clearpage
 % 
 
 \section{Introduction}
