--- a/main.tex
+++ b/main.tex
@@ -506,10 +506,10 @@ with the energies following the same gradient.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=7cm]{short_pbe0_homo}
-\includegraphics[width=7cm]{short_pbe0_ie}
-\includegraphics[width=7cm]{short_pbe0_st}
-\includegraphics[width=7cm]{short_pbe0_tddft}
+\includegraphics[width=7cm]{short_pbe0}
+%\includegraphics[width=7cm]{short_pbe0_ie}
+%\includegraphics[width=7cm]{short_pbe0_st}
+%\includegraphics[width=7cm]{short_pbe0_tddft}
 \end{center}
 \caption{Comparison of the HOMO ($\varepsilon_{HOMO}$),
 the ionisation (I.E.), and
@@ -559,10 +559,10 @@ the $\Delta_{ST}$ or TD-DFT framework (average error $\le 3.6\%$).
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=7cm]{ring_pbe0_homo}
-\includegraphics[width=7cm]{ring_pbe0_ie}
-\includegraphics[width=7cm]{ring_pbe0_st}
-\includegraphics[width=7cm]{ring_pbe0_tddft}
+\includegraphics[width=7cm]{ring_pbe0}
+%\includegraphics[width=7cm]{ring_pbe0_ie}
+%\includegraphics[width=7cm]{ring_pbe0_st}
+%\includegraphics[width=7cm]{ring_pbe0_tddft}
 \end{center}
 \caption{Comparison of the HOMO ($\varepsilon_{HOMO}$),
 the ionisation (I.E.),
@@ -573,20 +573,21 @@ The $\Delta_{ST}$ values are the difference
 between the lowest $\pi^*$ triplet (unrestricted formalism) and the lowest singlet state
 (restricted formalism).
 Calculations are at the PBE0/def-SV(P) level.
-The C\(_{54}\)H\(_{18}\) molecule is represented in Figure \ref{fig:c54h18}.}
+Molecule \textbf{[1]} to \textbf{[6]} are is represented in Figure \ref{fig:molecules}.}
 \label{fig:rings_graphs}
 \end{figure}
 
 \begin{figure}
 \begin{center}
-\fbox{\includegraphics[width=5cm]{c54h18}}
+%\fbox{\includegraphics[width=5cm]{c54h18}}
+\fbox{\includegraphics[width=5cm]{molecules}}
 \end{center}
-\caption{\label{fig:c54h18}The C\(_{54}\)H\(_{18}\) molecule.}
+\caption{\label{fig:molecules}Representation of the molecules \textbf{[1]} to \textbf{[6]}.}
 \end{figure}
 
 The potentials derived above are also tested on larger systems.
 Figure \ref{fig:rings_graphs} shows the $\Delta_{ST}$, the IE and
-HOMO energy values for several ring systems, the largest of which is C$_{54}$H$_{18}$, shown in Figure~\ref{fig:c54h18}.
+HOMO energy values for several ring systems, the largest of which is C$_{54}$H$_{18}$, shown in Figure~\ref{fig:molecules}.
 As with the short chain alkenes, the general trend of the results is well-replicated
 by the pseudo-systems, and the percentage errors, displayed in Table
 \ref{table:ring_system_errors}, are similar. For PBE0, Figure~\ref{fig:rings_graphs}, mean average errors are below 3.6\% for excitation energies, independently of the way they are computed
@@ -615,10 +616,10 @@ TD-DFT $\pi-\pi^*$       & 13.5 &  3.6  &  2.7 &  6.3 &  7.0 \\
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=7cm]{long_pbe0_homo}
-\includegraphics[width=7cm]{long_pbe0_ie}
-\includegraphics[width=7cm]{long_pbe0_st}
-\includegraphics[width=7cm]{long_pbe0_tddft}
+\includegraphics[width=7cm]{long_pbe0}
+%\includegraphics[width=7cm]{long_pbe0_ie}
+%\includegraphics[width=7cm]{long_pbe0_st}
+%\includegraphics[width=7cm]{long_pbe0_tddft}
 \end{center}
 
 \caption{Comparison of the HOMO ($\varepsilon_{HOMO}$),
