--- a/main.tex
+++ b/main.tex
@@ -251,9 +251,10 @@ initial guess for the extraction of a pseudo-potential for a general $\pi$ carbo
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=8cm]{ch3_p}
-\includegraphics[width=8cm]{ch3_pseudo_p}
-\includegraphics[width=8cm]{tm_sp2_potentials}
+\includegraphics[width=8cm]{scheme}
+%\includegraphics[width=8cm]{ch3_p}
+%\includegraphics[width=8cm]{ch3_pseudo_p}
+%\includegraphics[width=8cm]{tm_sp2_potentials}
 \end{center}
 \caption{Diagrams of CH\(^{\bullet}_{3}\) (left) and pseudo-CH\(^{\bullet}_{3}\)
 (right, below) molecules.
