altered figure ordering

--- a/main.tex
+++ b/main.tex
@@ -582,9 +582,9 @@ Molecules \textbf{[1]} to \textbf{[6]} are represented in Figure \ref{fig:molecu
 \label{fig:rings_graphs}
 \end{figure}
 
-The potentials derived above are also tested on larger systems.
+The potentials derived above are also tested on fused rings (Figure \ref{fig:molecules}), and larger chains.
 Figure \ref{fig:rings_graphs} shows the $\Delta_{ST}$, the IE and
-HOMO energy values for several ring systems, shown in Figure~\ref{fig:molecules}, the largest of which is \textbf{[6]}: C$_{54}$H$_{18}$.
+HOMO energy values for several ring systems, the largest of which is \textbf{[6]}: C$_{54}$H$_{18}$.
 As with the short chain alkenes, the general trend of the results is well-replicated
 by the pseudo-systems, and the percentage errors, displayed in Table
 \ref{table:ring_system_errors}, are similar. For PBE0, Figure~\ref{fig:rings_graphs}, mean average errors are below 3.6\% for excitation energies, independently of the way they are computed
