--- a/main.tex
+++ b/main.tex
@@ -752,19 +752,33 @@ We could even show that the virtual space was reproduced properly.
 In this section, we study the space of the low energy excited states.
 To do so, we compute a large number of $\pi$ excited states and compare
 our results to reference calculations with the PBE0 functional.
-As can be seen from }Figure~\ref{cnhn_uv},\hl{the excitation energies as well as the
+As can be seen from }Figure~\ref{cnhn_2_uv} and \ref{cnhn_uv},\hl{the excitation energies as well as the
 intensities of the excitations computed by TD-DFT are in extremely good agreement.}
 
 \begin{figure}
 %\vspace*{0.1in}   %%% FIGURE 8
 \begin{center}
-\includegraphics[width=12cm,angle=270]{cnhn_uv}
+\includegraphics[width=12cm,angle=270]{cnhn_2_uv}
 \end{center}
 \vspace{0.25in}
 \hspace*{3in}
 \caption{Comparison of the UV spectra obtained with pseudo potentials and reference
-calculations def2-TZVP/TD-PBE0.
-Pseudo potential calculations were shifted by a factor of 1.15.}
+	calculations def2-TZVP/TD-PBE0 for some all trans chain alkenes C$n$H$_{n+2}$.
+	Two sets of pseudo-potentials
+        are compared: "ps-new" refers to pseudo-potentials optimised for UV spectra.}
+\label{fig:cnhn_uv}
+\end{figure}
+
+\begin{figure}
+%\vspace*{0.1in}   %%% FIGURE 9
+\begin{center}
+\includegraphics[width=12cm,angle=270]{cnhn_uv}
+\end{center}
+\vspace{0.25in}
+\hspace*{3in}
+\caption{Comparison of the UV spectra obtained with pseudo-potentials and reference
+	calculations def2-TZVP/TD-PBE0 for some fused rings molecules. Two sets of pseudo-potentials
+	are compared: "ps-new" refers to pseudo-potentials optimised for UV spectra.}
 \label{fig:cnhn_uv}
 \end{figure}
 
@@ -776,8 +790,7 @@ Firstly, the new pseudo-potentials for sp$^2$ hybridised
 atoms are completely atomic and, even if the directionality of the bonding pattern
 has to be fulfilled by correctly positioning the \(s\) potentials. No potentials need to
 be added relative to the position of more than one atom.
-Secondly, we gave a physical meaning to all the pseudo-potential
-terms.
+Secondly, we gave a physical meaning to all the pseudo-potential terms.
 Contrary to our previous attempt, we do not rely on the "no collapse" term.
 In fact, in this work we did not need such a term.
 We could show that not only the occupied orbitals were well-reproduced
